--- a/demo-123.html
+++ b/demo-123.html
@@ -1,194 +1,12 @@
-<!DOCTYPE html>
-<html><head>
-<meta charset="UTF-8">
-<base href="https://sqlite.org/wasm/doc/tip/demo-123.html" />
-<meta http-equiv="Content-Security-Policy" content="default-src 'self' data:;  script-src 'self' 'wasm-unsafe-eval' 'unsafe-inline';  style-src 'self' 'unsafe-inline';  img-src * data:;  worker-src 'self' 'nonce-2e1ef1002313c4a434df9eb7d69e54a9b67b01fc478f9552';" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>demo-123.html</title>
-<link rel="alternate" type="application/rss+xml" title="RSS Feed" \
- href="/wasm/timeline.rss" />
-<link rel="stylesheet" href="/wasm/style.css?id=d18a597d" type="text/css" />
-</head>
-<body class="artifact rpage-file cpage-file">
-<script nonce="2e1ef1002313c4a434df9eb7d69e54a9b67b01fc478f9552">
-if(window.localStorage && +window.localStorage.getItem('dark-mode')){
-  // do this early to try to lessen the effect of a FOUC when switching pages
-  document.firstElementChild.classList.add('dark-mode');
-}
-</script>
-<style>
-  @import url(/wasm/doc/trunk/assets/fossil-doc.css)
-</style>
-<script src="/wasm/doc/trunk/assets/highlightjs/highlight-sqlite3.min.js"></script>
-<script nonce="2e1ef1002313c4a434df9eb7d69e54a9b67b01fc478f9552">
-window.addEventListener('DOMContentLoaded', function(){
-  "use strict";
-  /* Set up bright/dark mode toggle */
-  const eHtml = document.firstElementChild;
-  const darkCssClass = 'dark-mode';
-  const ln = document.createElement('a');
-  ln.href = '#';
-  const localStorage = self.localStorage || self.sessionStorage || {
-    setItem:()=>{}, getItem:()=>{}
-  };
-  const updateThemeLink = function(doToggle=false){
-    if(doToggle) eHtml.classList.toggle(darkCssClass);
-    const isDark = eHtml.classList.contains(darkCssClass);
-    if(isDark) ln.innerText = "Bright Mode";
-    else ln.innerText = "Dark Mode";
-    localStorage.setItem(darkCssClass, isDark ? 1 : 0);
-  };
-  updateThemeLink();
-  const eNavLinks = document.querySelector('nav#nav-links');
-  ln.addEventListener('click', (e)=>{
-    updateThemeLink(true);
-    e.stopPropagation();
-    e.preventDefault();
-    return false;
-  }, true);
-  eNavLinks.appendChild(ln);
-  if(document.body.classList.contains('doc')){
-    /* Init code specific to the /doc pages. */
-    const klassDSN = 'disable-section-numbers';
-    /** If the document has less than 2 H1 elements,
-        disable section numbering. */
-    if(!document.body.classList.contains(klassDSN)
-      && document.body.querySelectorAll('h1').length<2){
-      document.body.classList.add(klassDSN);
-    }
-    for(const klass of [ klassDSN ]) { 
-      /** For each CSS class name in this list, search for a SPAN
-          element with that class. If found, delete the element and
-          add that class name to the BODY element. These are used for
-          CSS filters.
-      */
-      const e = document.body.classList.contains(klass)
-        ? false : document.body.querySelector('span.'+klass);
-      if(e){
-        e.remove();
-        document.body.classList.add(klass);
-      }
-    }
-  }/* body.doc-specific pieces */
-}, true);
-</script><header id='header-logo'>
-<a href='https://sqlite.org' class='nav-logo'><img src='/wasm/logo' alt='SQLite logo'/></a>
-<!-- maintenance reminder: ^^^^ use /logo instead of /doc/... or /raw/...
-  to get cachable image, though cache time is relatively short. -->
-<span>WebAssembly &amp; JavaScript</span>
-</header><nav class='mainmenu' id='nav-links'><a href='/wasm/doc/trunk/index.md' class=''>Home</a><a href='/wasm/doc/trunk/news.md' class=''>News</a><a href='/wasm/doc/trunk/api-index.md' class=''>API Index</a><a href='/wasm/doc/trunk/cookbook.md' class=''>Cookbook</a><a href='/wasm/doc/trunk/faq.md' class=''>FAQ</a><a href='/wasm/search' class=''>Search</a></nav><h1>demo-123.html</h1>
-<form id='f01' method='GET' action='/wasm/file'>
-<input type='hidden' name='udc' value='1'>
-<div class="submenu">
-<a class="label sml-annotate" href="/wasm/annotate?filename=demo-123.html&amp;checkin=tip">Annotate</a>
-<a class="label sml-artifact" href="/wasm/artifact/8c70a412ce">Artifact</a>
-<a class="label sml-blame" href="/wasm/blame?filename=demo-123.html&amp;checkin=tip">Blame</a>
-<a class="label sml-check-ins-using" href="/wasm/timeline?uf=8c70a412ce386bd3796534257935eb1e3ea5c581e5d5aea0490b8232e570a508">Check-ins Using</a>
-<a class="label sml-doc" href="/wasm/doc/tip/demo-123.html">Doc</a>
-<a class="label sml-download" href="/wasm/raw/8c70a412ce386bd3796534257935eb1e3ea5c581e5d5aea0490b8232e570a508?at=demo-123.html">Download</a>
-<a class="label sml-hex" href="/wasm/hexdump?name=8c70a412ce386bd3796534257935eb1e3ea5c581e5d5aea0490b8232e570a508">Hex</a>
-<a class="label sml-html" href="/wasm/file?name=demo-123.html">Html</a>
-<label class='submenuctrl submenuckbox smc-ln'><input type='checkbox' name='ln' id='submenuctrl-0' >Line Numbers</label>
-</div>
-<input type="hidden" name="name" value="demo-123.html">
-<input type="hidden" name="txt" value="">
-</form>
-<div class="content"><span id="debugMsg"></span>
-<h2>File <a data-href='/wasm/finfo?name=demo-123.html&m&ci=tip' href='/wasm/honeypot'>demo-123.html</a>
-from the <a data-href='/wasm/info/tip' href='/wasm/honeypot'>latest check-in</a></h2>
-<hr>
-<blockquote class="file-content">
-<pre>
-<code class="language-html">&lt;!doctype html&gt;
-&lt;html lang=&quot;en-us&quot;&gt;
-  &lt;head&gt;
-    &lt;meta charset=&quot;utf-8&quot;&gt;
-    &lt;meta http-equiv=&quot;Content-Type&quot; content=&quot;text/html; charset=utf-8&quot;&gt;
-    &lt;link rel=&quot;shortcut icon&quot; href=&quot;data:image/x-icon;,&quot; type=&quot;image/x-icon&quot;&gt;
-    &lt;title&gt;Hello, sqlite3&lt;/title&gt;
-    &lt;style&gt;
-      .warning, .error {color: red}
-      .error {background-color: yellow}
-      body {
-          display: flex;
-          flex-direction: column;
-          font-family: monospace;
-          white-space: break-spaces;
-      }
-    &lt;/style&gt;
-  &lt;/head&gt;
-  &lt;body&gt;
-    &lt;h1&gt;1-2-sqlite3 demo&lt;/h1&gt;
-    &lt;script src=&quot;jswasm/sqlite3.js&quot;&gt;&lt;/script&gt;
-    &lt;script src=&quot;demo-123.js&quot;&gt;&lt;/script&gt;
-  &lt;/body&gt;
-&lt;/html&gt;
-</code>
-</pre>
-</blockquote>
-</div>
-<script nonce="2e1ef1002313c4a434df9eb7d69e54a9b67b01fc478f9552">
-window.addEventListener('DOMContentLoaded',async function(){
-  document.querySelectorAll('a[href^="http"],a[href^="//"]').forEach(function(e){
-    // Clearly mark external links
-    e.classList.add('external');
-    // Arguable: open external links in their own tab
-    e.target = e.href;
-  });
-}, false);
-</script>
-<script id='href-data' type='text/json'>{"delay":0,"mouseover":0}</script>
-<script nonce="2e1ef1002313c4a434df9eb7d69e54a9b67b01fc478f9552">/* style.c:914 */
-function debugMsg(msg){
-var n = document.getElementById("debugMsg");
-if(n){n.textContent=msg;}
-}
-/* href.js */
-var antiRobot = 0;
-function antiRobotGo(){
-if( antiRobot!=3 ) return;
-antiRobot = 7;
-var anchors = document.getElementsByTagName("a");
-for(var i=0; i<anchors.length; i++){
-var j = anchors[i];
-if(j.hasAttribute("data-href")) j.href=j.getAttribute("data-href");
-}
-var forms = document.getElementsByTagName("form");
-for(var i=0; i<forms.length; i++){
-var j = forms[i];
-if(j.hasAttribute("data-action")) j.action=j.getAttribute("data-action");
-}
-}
-function antiRobotDefense(){
-var x = document.getElementById("href-data");
-var jx = x.textContent || x.innerText;
-var g = JSON.parse(jx);
-if( g.mouseover ){
-document.body.onmousedown=function(){
-antiRobot |= 2;
-antiRobotGo();
-document.body.onmousedown=null;
-}
-document.body.onmousemove=function(){
-antiRobot |= 2;
-antiRobotGo();
-document.body.onmousemove=null;
-}
-}else{
-antiRobot |= 2;
-}
-if( g.delay>0 ){
-setTimeout(function(){
-antiRobot |= 1;
-antiRobotGo();
-}, g.delay)
-}else{
-antiRobot |= 1;
-}
-antiRobotGo();
-}
-antiRobotDefense();
-</script>
-<script src='/wasm/builtin?name=menu.js&id=882b9c22'></script>
-</body>
+<!doctype html>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Hello, sqlite3</title>
+  </head>
+  <body>
+    <script src="jswasm/sqlite3.js"></script>
+    <script src="demo-123.js"></script>
+  </body>
 </html>
