--- a/test.html
+++ b/test.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 確保使用正確的 Open Graph 標籤 -->
     <meta property="og:title" content="這是一篇陽春的範例文章">
-    <meta property="og:description" content="這裡是文章的前幾行內容。描述簡短而有吸引力，可以吸引用戶點擊閱讀全文。">
+    <meta property="og:description" content="這是一篇測試文章的前幾行內容，字數適中，可以吸引用戶點擊閱讀全文。">
     <meta property="og:image" content="">
     <meta property="og:url" content="https://example.com">
+    <!-- 指定內容類型 -->
+    <meta property="og:type" content="website">
     <title>陽春文章範例</title>
 </head>
 <body>
