--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="這是一個測試">
     <!-- 確保使用正確的 Open Graph 標籤 -->
     <meta property="og:title" content="這是一篇陽春的範例文章">
     <meta property="og:description" content="這是一篇測試文章的前幾行內容，字數適中，可以吸引用戶點擊閱讀全文。">
